# sfh-newsmanager

./: .env.example  .gitignore  IMPLEMENTATION_TASKS.md  Master AI Blue Prints.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_DEV.md  conversation_history.json  main.py  pending_actions.json  pyproject.toml  requirements.txt  sample_source_text.txt
config/: .env.template  README.md  settings.json
docs/: 00_principles.md  DATABASE_SETUP.md  DIRECTORY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TASKS.md  OPENROUTER_SETUP.md  PROGRESS.md  SLACK_SETUP_GUIDE.md  SUPABASE_MCP.md  task_template.md
docs/agents-spec/: README.md  newsletter_manager.md
docs/blueprint/: BEHAVIORAL_GUIDELINES.md  behavioral prompt
docs/core_tasks/: 3.12_user_cancels.md  3.13_follow_up_context.md  3.1_create_article_with_image.md  3.2_create_article_simple.md  3.3_list_show_content.md  3.4_update_content.md  3.6_publish_article.md  3.7_unpublish_article.md
examples/: README.md
instructions/: README.md
migrations/: 001_create_articles_table.sql  002_seed_data.sql
scripts/: check_schema.py  debug_slack_files.py  generate_test_samples.py  init_db.py  test_agent.py  test_agent_gen.py  test_agent_image.py  test_content_gen.py  test_db.py  test_file_generation.py  test_file_workflow_integration.py  test_generate_content_direct.py  test_image_gen.py  test_improvements.py  test_intent.py  test_llm_direct.py  test_phase3_simulation.py  test_supabase.py  test_tools.py  test_vision_tool.py
src/: __init__.py  dashboard.py  slack_app.py
workflows/: create_with_image.md
(+76 files in other folders)
